report.html : use fontello icons

--- a/browser/report.html
+++ b/browser/report.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Vidjil report</title>
-
+        <link rel="stylesheet" type="text/css" href="css/icons/fontello/css/fontello.css" />
+        <link rel="stylesheet" type="text/css" href="css/icons/fontello/css/animation.css" />
         <!-- page style-->
         <style>
             @page {
