index.html : remove dead code

--- a/browser/index.html
+++ b/browser/index.html
@@ -221,7 +221,7 @@
                     </select></div>
             </div>
 
-            <div class="menu" id="filter_menu" onmouseenter="builder.build_displaySelector();"> filter
+            <div class="menu" id="filter_menu"> filter
                 <div class="selector">
                     <div>
                         <div class="menu_box">
