export.js; refresh clone content from export menu Also add cypress test

--- a/browser/index.html
+++ b/browser/index.html
@@ -784,6 +784,8 @@
                 Clonotypes
                 <span id="rs-selected-clones-count" style="float: right;"></span>
             </div>
+            <div class="rs-flex-parent-v" id="report-clones-list">
+            </div>
         </div>
 
         <div class="menu_box"  id="report-settings-block">
