index.html; give a proper id to export menu template to easy access

--- a/browser/index.html
+++ b/browser/index.html
@@ -749,7 +749,7 @@
 </template>
 
 <template id="report-settings">
-    <div class="">
+    <div id="report-menu" class="">
         <div style="text-align: center;"><b>Export report</b></div>
 
         Preset: <div id="report-settings-save">
