reports: group bikeshedding

--- a/browser/index.html
+++ b/browser/index.html
@@ -752,7 +752,7 @@
     <div id="report-menu" class="">
         <div style="text-align: center;"><b>Export report</b></div>
 
-        Preset: <div id="report-settings-save">
+        Templates, saved reports: <div id="report-settings-save">
 
         </div>
 
@@ -802,8 +802,8 @@
             <button type="button" onclick="report.print();">Show report</button>
         </div>
         <div style="float: right;">
-            <button id="rs-saveas-button" type="button" onclick="report.saveas();">Save as new report settings</button>
-            <button id="rs-save-button" type="button" onclick="report.save(undefined,true);">Save report settings</button>
+            <button id="rs-saveas-button" type="button" onclick="report.saveas();">Save as a new report</button>
+            <button id="rs-save-button" type="button" onclick="report.save(undefined,true);">Save this report</button>
         </div>
     </div>
 </template>
