export.js : add button to delete existing report

--- a/browser/index.html
+++ b/browser/index.html
@@ -757,6 +757,7 @@
             <div class="rs-flex" id="report-settings-save">
 
                 <div style="float: right;">
+                    <button id="rs-delete-button" type="button" onclick="report.delete();">Delete</button>
                     <button id="rs-saveas-button" type="button" onclick="report.saveas();">Create new report</button>
                 </div>
             </div> 
