export.js : fix locus stats table css

--- a/browser/report.html
+++ b/browser/report.html
@@ -119,12 +119,13 @@
             .report_table {
                 border-collapse: collapse;
                 width: -webkit-fill-available;
-                font-size: 70%;
+                font-size: 65%;
             }
 
             .report_table td, .report_table th {
                 border: 1px solid #ddd;
-                padding: 4px 8px;
+                padding: 4px 4px;
+                overflow-wrap: break-word;
             }
 
             .report_table tr:nth-child(even){background-color: #f2f2f2;}
