export.js; add a real template gesture in localstorage These reports will be available between analysis Link to #5012

--- a/browser/index.html
+++ b/browser/index.html
@@ -818,7 +818,8 @@
 
 
         <div style="float: right;">
-            <button id="rs-save-button" type="button" onclick="report.save(undefined,true);">Save this report</button>
+            <button id="rs-save-button-template" type="button" onclick="report.saveas(true, true);" >Save as template</button>
+            <button id="rs-save-button-report"   type="button" onclick="report.saveas(true, false);">Save as report</button>
         </div>
 
     </div>
