--- a/browser/index.html
+++ b/browser/index.html
@@ -764,6 +764,8 @@
                 <div class="rs-header">
                     LOCUS
                 </div>
+                <div class="rs-flex-parent-h" id="rs-locus-list">
+                </div>
             </div>
 
             <div  id="report-settings-clones">
