Qunit, minimal test for warnings view

--- a/browser/test/QUnit/test_Qunit.html
+++ b/browser/test/QUnit/test_Qunit.html
@@ -35,6 +35,13 @@
         <div id="info-row" style="width:800px; height:500px;"><div id="info"> </div></div>
         <div id="list-row" style="width:800px; height:500px;"><div id="list"> </div></div>
         <div id="data-row" style="width:800px; height:500px;"><div id="data"> </div></div>
+        <div class="menu" id="warnings_menu"> warnings
+                <div class="selector" id="warnings_selector">
+                    <div class="menu_box">
+                        <div id="warnings_list"></div>
+                    </div>
+                </div>
+            </div>
         <div id="test_div"></div>
     </div>
 
