tsne.js; add constant seed for random number This allow to get reproductible projection of tsne. Use an external library 'seedrandom' (https://github.com/davidbau/seedrandom)

--- a/browser/index.html
+++ b/browser/index.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="css/jquery-ui/jquery-ui.theme.css" />
     <link rel="stylesheet" href="css/lib/select2.min.css" />
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
     <script data-main="js/app.js" src="js/lib/require.js"></script>
 
 
