browser; extract hardcoded top limit to a variable var CLONOTYPE_TOP_LIMIT is set to 100 in main.js and reuse later

--- a/browser/index.html
+++ b/browser/index.html
@@ -95,7 +95,7 @@
         <p class='help'>The .analysis file stores all parameters set by the user (tags, colors, manual clusters).</p>
 
         <button id="start_import_json" onclick="document.getElementById('file_menu').style.display='none';
-            m.load('upload_json','upload_pref', 200)">start</button>
+            m.load('upload_json','upload_pref')">start</button>
     </div>
 
         <div id="axis_choice" >
