--- a/browser/index.html
+++ b/browser/index.html
@@ -495,7 +495,7 @@
             <div id="bot-container"> </div>
         </div>
 
-        <form id="form"></form>
+        <form id="form" target="_blank"></form>
 
     <div id="tip-container"></div>
 
@@ -594,10 +594,6 @@
                                     <a id="toAssignSubsets"
                                             title="Send sequences to ARResT/AssignSubsets to classify IGH sequence in a CLL subset"
                                             class="aligner-button" onclick="javascript:segment.sendTo('assignSubsets');"><i class="icon-forward-1"></i> AssignSubsets</a>
-                                    <span class="devel-mode"><label title="Open external tool in another tab" class="aligner-checkbox-label" for="post_target_blank">
-                                        <span><input class="aligner-checkbox-input" type="checkbox" id="post_target_blank" autocomplete="off" checked="true"></span>
-                                        <span class="aligner-checkbox-text">use new tab</span>
-                                    </label></span>
                             </div>
                     </div>
 
